# test-task

./: pyproject.toml
test_task/: data.py  data_processor.py  main.py  request.py
