[project]
name = "test-task"
version = "0.1.0"
description = ""
authors = [
    {name = "Viktoryia Nikifarenka",email = "viktoryia.nikifarenka@innowise.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "numpy (>=1.0,<2.0)",
    "black (>=25.1.0,<26.0.0)",
    "flake8 (>=7.1.2,<8.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
